[gd_scene load_steps=6 format=2]

[ext_resource path="res://drums.png" type="Texture" id=1]
[ext_resource path="res://drums.gd" type="Script" id=2]
[ext_resource path="res://sounds/drum_blue.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/drum_red.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "press"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}

[node name="Drums" type="Node2D"]
position = Vector2( 8.50122, 1.79882 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 637.101, 564.557 )
texture = ExtResource( 1 )

[node name="PointA" type="Position2D" parent="."]
position = Vector2( 640, 720 )

[node name="PointB" type="Position2D" parent="."]
position = Vector2( 640, 420 )

[node name="PointC" type="Position2D" parent="."]
position = Vector2( 640, 345 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press = SubResource( 1 )

[node name="AudioRed" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 397.77, 609.678 )
stream = ExtResource( 4 )
volume_db = 3.0

[node name="AudioRedR" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 884.299, 617.28 )
stream = ExtResource( 4 )
volume_db = 3.0

[node name="AudioBlue" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 353.493, 419.165 )
stream = ExtResource( 3 )
volume_db = 3.0

[node name="AudioBlueR" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1006, 419.165 )
stream = ExtResource( 3 )
volume_db = 3.0
